// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings View matches the snapshot 1`] = `
<DocumentFragment>
  <header
    class="w-full h-12 flex items-center p-2 md:hidden justify-between"
  >
    <button
      class="w-11 float-left"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-arrow-left fa-w-14 m-1 text-lg"
        data-icon="arrow-left"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
          fill="currentColor"
        />
      </svg>
    </button>
    <h1
      class="mx-2 font-medium text-lg overflow-x-auto whitespace-nowrap"
    >
      Settings
    </h1>
    <div
      class="w-11"
    />
  </header>
  <div
    class="p-2.5 py-3"
  >
    <h2
      class="pb-2 text-lg font-bold"
    >
      Account Information
    </h2>
    <div
      class=""
    >
      <div
        class="flex justify-between items-center py-1"
      >
        <span>
          Email:
        </span>
        <span />
      </div>
      <div
        class="flex justify-between items-center py-1"
      >
        <span>
          Date Registered:
        </span>
        <span>
          Date unavailable.
        </span>
      </div>
    </div>
  </div>
  <div
    class="p-2.5 py-3"
  >
    <h2
      class="pb-2 text-lg font-bold"
    >
      Preferences
    </h2>
    <div
      class=""
    >
      <div
        class="flex justify-between items-center py-1"
      >
        <div
          class="flex flex-col"
        >
          <span
            class="font-medium"
          >
            Theme:
          </span>
          <span
            class="font-light"
          >
            When set to auto, the app will use your system setting's to determine the theme.
          </span>
        </div>
        <span>
          <select
            aria-label="theme-select"
            class="bg-gray-500 py-1 rounded"
            id="theme"
            name="theme"
          >
            <option
              value="auto"
            >
              Auto (system)
            </option>
            <option
              value="dark"
            >
              Dark
            </option>
            <option
              value="light"
            >
              Light
            </option>
          </select>
        </span>
      </div>
      <div
        class="flex justify-between items-center py-1"
      >
        <div
          class="flex flex-col"
        >
          <span
            class="font-medium"
          >
            Notifications:
          </span>
          <span
            class="font-light"
          >
            When enabled, displays push notifications regarding soon to be aired episodes.
          </span>
        </div>
        <span>
          <div
            class="relative inline-block w-10 mr-0 align-middle select-none transition duration-200 ease-in"
          >
            <input
              aria-label="toggle"
              class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"
              id="test"
              name="test"
              type="checkbox"
            />
            <label
              class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"
              for="test"
            />
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="p-2.5 py-3"
  >
    <h2
      class="pb-2 text-lg font-bold"
    >
      Other
    </h2>
    <div
      class=""
    >
      <a
        class="block"
        download="undefineduser/data"
        href="undefineduser/data"
      >
        Download your data.
      </a>
      <a
        class="block mt-4"
        href="undefinedauth/logout"
      >
        Logout.
      </a>
      <div
        class="mt-4 font-light text-sm"
      >
        Version: 2.11.0
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Settings View matches the snapshot with user data 1`] = `
<DocumentFragment>
  <header
    class="w-full h-12 flex items-center p-2 md:hidden justify-between"
  >
    <button
      class="w-11 float-left"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-arrow-left fa-w-14 m-1 text-lg"
        data-icon="arrow-left"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
          fill="currentColor"
        />
      </svg>
    </button>
    <h1
      class="mx-2 font-medium text-lg overflow-x-auto whitespace-nowrap"
    >
      Settings
    </h1>
    <div
      class="w-11"
    />
  </header>
  <div
    class="p-2.5 py-3"
  >
    <h2
      class="pb-2 text-lg font-bold"
    >
      Account Information
    </h2>
    <div
      class=""
    >
      <div
        class="flex justify-between items-center py-1"
      >
        <span>
          Email:
        </span>
        <span>
          test@email.com
        </span>
      </div>
      <div
        class="flex justify-between items-center py-1"
      >
        <span>
          Date Registered:
        </span>
        <span>
          July 8, 2021, 2:59 PM GMT+1
        </span>
      </div>
    </div>
  </div>
  <div
    class="p-2.5 py-3"
  >
    <h2
      class="pb-2 text-lg font-bold"
    >
      Preferences
    </h2>
    <div
      class=""
    >
      <div
        class="flex justify-between items-center py-1"
      >
        <div
          class="flex flex-col"
        >
          <span
            class="font-medium"
          >
            Theme:
          </span>
          <span
            class="font-light"
          >
            When set to auto, the app will use your system setting's to determine the theme.
          </span>
        </div>
        <span>
          <select
            aria-label="theme-select"
            class="bg-gray-500 py-1 rounded"
            id="theme"
            name="theme"
          >
            <option
              selected=""
              value="auto"
            >
              Auto (system)
            </option>
            <option
              value="dark"
            >
              Dark
            </option>
            <option
              value="light"
            >
              Light
            </option>
          </select>
        </span>
      </div>
      <div
        class="flex justify-between items-center py-1"
      >
        <div
          class="flex flex-col"
        >
          <span
            class="font-medium"
          >
            Notifications:
          </span>
          <span
            class="font-light"
          >
            When enabled, displays push notifications regarding soon to be aired episodes.
          </span>
        </div>
        <span>
          <div
            class="relative inline-block w-10 mr-0 align-middle select-none transition duration-200 ease-in"
          >
            <input
              aria-label="toggle"
              class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"
              id="test"
              name="test"
              type="checkbox"
            />
            <label
              class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"
              for="test"
            />
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="p-2.5 py-3"
  >
    <h2
      class="pb-2 text-lg font-bold"
    >
      Other
    </h2>
    <div
      class=""
    >
      <a
        class="block"
        download="undefineduser/data"
        href="undefineduser/data"
      >
        Download your data.
      </a>
      <a
        class="block mt-4"
        href="undefinedauth/logout"
      >
        Logout.
      </a>
      <div
        class="mt-4 font-light text-sm"
      >
        Version: 2.11.0
      </div>
    </div>
  </div>
</DocumentFragment>
`;
